--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@mui/material": "^5.15.11",
     "@mui/x-charts": "^6.19.5",
     "@mui/x-data-grid": "^6.19.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +22,9 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
@@ -28,7 +34,10 @@
     "recharts": "^2.12.1",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
+    "vaul": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
